# Tetrish

./: .gitignore  CMakeLists.txt
sfinder-cpp/core/: field.hpp  piece.hpp
sfinder-cpp/finder/: perfect.cpp  perfect.hpp
src/: benchmark.h  license.h  main.cpp  setting.h  util.h
src/engine/: controller.h  engine.h  explorer.h  measurement.h  search.h  stack.h  tspin.h
src/engine/bridge/: bridge-sfinder-cpp.h
src/system/: game.h  mino.h  position.h
